--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Project</title>
+        <title>Search</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-
+        <div class="headers">
+            <a href="https://www.google.com/advanced_search">Advanced</a>
+            <a href="https://www.google.com/imghp?hl=EN">Images</a>
+        </div>
+        <div class="form">
+            <form action="https://google.com/search">
+                <div class="centerLogo">
+                    <img src="/img/googlelogo_color_272x92dp.png" alt="google logo">
+                </div>
+                <input id="userinput" type="text" name="q" autofocus>
+                <div class="formBtns">
+                    <input id="actionbtn" type="submit" value="Google Search">
+                    <input type="button" value="I`m Feeling Lucky">
+                </div>
+            </form>
+        </div>
     </body>
 </html>
