--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="headers">
             <a href="https://www.google.com/advanced_search">Advanced</a>
-            <a href="https://www.google.com/imghp?hl=EN">Images</a>
+            <a href="https://www.google.com/search?q=cat">Images</a>
         </div>
         <div class="form">
             <form action="https://google.com/search">
