--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="form">
             <form action="https://google.com/search">
                 <div class="centerLogo">
-                    <img src="img/googlelogo_color_272x92dp.png" alt="google logo">
+                    <img src="./img/googlelogo_color_272x92dp.png" alt="google logo">
                 </div>
                 <input id="userinput" type="text" name="q" autofocus>
                 <div class="formBtns">
